Fix bug : featured images rendering on small screens

--- a/static/Design_2/assets/css/style.css
+++ b/static/Design_2/assets/css/style.css
@@ -315,7 +315,6 @@ header {
 }
 
 .img-col, .img-col * {
-  display: inline;
   overflow: hidden;
 }
 
@@ -339,6 +338,7 @@ article {
 .img-col img  {
   object-fit: cover;
   margin: 0;
+  width: 100%;
 }
 
 ul {
@@ -380,6 +380,7 @@ ul {
 
 .galery {
   width: 100%;
+  height: 100%;
 }
 
 .galery-nav {
